--- a/src/components/FirstPage/FirstPage.css
+++ b/src/components/FirstPage/FirstPage.css
@@ -1,21 +1,9 @@
-#card-container { 
-    background-color: black;
-    text-align: center;
-    margin: 40%;
-    width: 600px;
-    height: 300px;
-    justify-content: center;
-    align-items: center;
-    
-   
-    
-}
-
-
 p {
     text-align: center;
-    margin-bottom: 50px;
+    margin-top: -550px;
 }
-Card.Title {
-    color: white;
-}
+
+/* .centreButton {
+    display:flex;
+    justify-content:center;
+  } */
