--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,32 +1,35 @@
-
-/* #title {
-    padding-left: 750px;
+#title {
+    /* padding-left: 750px; */
+    text-align: center;
     font-size: 20px;
     margin-bottom: 0px;
-    
+}
 
-} */
+#footerButton {
 
-/* #footerButton {
-
-    position: absolute;
-    margin-left: 1025px; 
-    width: 200px !important;
+    /* position: absolute; */
+    /* margin-left: 1025px;  */
+    /* width: 200px !important; */
     bottom: 20px !important;
     font-size: 20px;
     margin-top: 10px;
 
-} */
+}
 
-/* #bottom {
-    
+#footer-container {
+    display: flex;
+}
+
+#bottom {
     background-color: darkgrey;
-    margin-top: 200px;
-    width: 200%;
-   height: 75px;
-} */
+    /* margin-top: 200px; */
+    text-align: center;
+    /* width: 200%; */
+    /* height: 75px; */
+    margin-top: 5%;
+}
 
-#footer {
+/* #footer {
     background-color: darkgrey;
 
 }
@@ -43,4 +46,4 @@
         width: 100px;
         bottom: 5px;
         top: 5px;
-}
+} */
