--- a/src/components/ActivityCard/ActivityCard.css
+++ b/src/components/ActivityCard/ActivityCard.css
@@ -1,8 +1,8 @@
 .activity-card {
-    width: 240px;
-    height: 240px;
+    /* width: 340px;
+    height: 240px; */
     margin-top: 2rem;
-    margin-left: 2rem;
+    /* margin-left: 2rem; */
     /* background-image: url('https://images.theconversation.com/files/366100/original/file-20201028-17-8cpm3p.jpg?ixlib=rb-1.1.0&rect=2589%2C92%2C3909%2C3909&q=45&auto=format&w=240&h=240&fit=crop') */
 }
 
@@ -11,11 +11,16 @@
     font-weight: 700;
     color: navy;
     text-align: center;
+    padding-top: 10px;
+    font-size: 30px;
 }
 
 .card-text {
     color: navy;
     text-align: center;
+    padding-top: 20px;
+    font-weight: 500;
+    font-size: 20px;
     /* justify-content: center; */
 }
 
@@ -28,8 +33,11 @@ img {
 }
 
 .btn {
+    padding: 10px;
     background-color: navy;
     border: navy;
+    text-align: center;
+    bottom: 0;
 }
 
 .btn :hover {
