--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 20px;
     margin-bottom: 0px;
+    color: #fff;
 }
 
 #footerButton {
@@ -12,8 +13,17 @@
     /* width: 200px !important; */
     bottom: 20px !important;
     font-size: 20px;
+    /* text-color: #fff */
     margin-top: 10px;
+    background-color: #3d95b3;
+    color: #fff;
+    outline:none;
+    border: none;
 
+}
+
+#footerButton:hover {
+    background-color: #265e70;
 }
 
 #footer-container {
@@ -21,7 +31,7 @@
 }
 
 #bottom {
-    background-color: darkgrey;
+    background-color: #134252;
     /* margin-top: 200px; */
     text-align: center;
     /* width: 200%; */
