--- a/src/components/ActivityCard/ActivityCard.css
+++ b/src/components/ActivityCard/ActivityCard.css
@@ -1,13 +1,12 @@
-.activity-card {
-    /* width: 340px;
+/* .activity-card { */
+/* width: 340px;
     height: 240px; */
-    margin-top: 2rem;
-    /* margin-left: 2rem; */
-    /* background-image: url('https://images.theconversation.com/files/366100/original/file-20201028-17-8cpm3p.jpg?ixlib=rb-1.1.0&rect=2589%2C92%2C3909%2C3909&q=45&auto=format&w=240&h=240&fit=crop') */
-}
+/* margin-top: 2rem; */
+/* margin-left: 2rem; */
+/* background-image: url('https://images.theconversation.com/files/366100/original/file-20201028-17-8cpm3p.jpg?ixlib=rb-1.1.0&rect=2589%2C92%2C3909%2C3909&q=45&auto=format&w=240&h=240&fit=crop') */
+/* } */
 
-
-.title {
+/* .title {
     font-weight: 700;
     color: navy;
     text-align: center;
@@ -22,24 +21,87 @@
     font-weight: 500;
     font-size: 20px;
     /* justify-content: center; */
-}
+/* } */
 
-img {
+/* img {
     border: none;
 }
 
 .bg-dark{
     background-color: white !important;
-}
+} */
 
-.btn {
-    padding: 10px;
-    background-color: navy;
-    border: navy;
+.activity-card {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    align-items: center;
+  }
+  
+  .cardActivity {
+    width: 340px;
+    height: 240px;
+    border-radius: 20px;
+    overflow: hidden;
+    border: 4px solid #fff;
+    position: relative;
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    /* object-fit: cover; */
+  }
+  
+  .card-main {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: -100%;
+    position: absolute;
+    background: #36778cad;
+    border-radius: 20px;
+    backdrop-filter: blur(2px);
+    color: #fff;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1s;
+  }
+  
+  .cardActivity:hover .card-main{
+  right: 0;
+  }
+  
+  .card-title {
+    text-transform: uppercase;
+    font-weight: 700;
     text-align: center;
-    bottom: 0;
-}
-
-.btn :hover {
-    background-color: navy !important;
-}
+    font-size: 30px;
+  }
+  
+  .card-info {
+    color: #fff;
+    text-align: center;
+    padding-top: 20px;
+    font-weight: 500;
+    font-size: 20px;
+  }
+  
+  .cardBtn {
+    color: #fff;
+    padding: 10px;
+    background-color: #023e52;
+    text-align: center;
+    width: 120px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+  }
+  
+  .cardBtn:hover {
+    background-color: #1e637a;
+  }
+  
