--- a/src/components/ActivityPage/ActivityPage.css
+++ b/src/components/ActivityPage/ActivityPage.css
@@ -3,3 +3,22 @@
     justify-content: center;
     align-content: center
 }
+
+.header {
+    background-color: #3d95b3;
+    height: 100px;
+    padding: 10px;
+}
+
+.header h3 {
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+}
+
+#headerP {
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+    margin: 0; 
+}
