changed the class component in searchbar to a react function

--- a/src/components/Explore/ExploreModal.css
+++ b/src/components/Explore/ExploreModal.css
@@ -1,5 +1,5 @@
 .explore {
-    /* background-color: rgb(8, 3, 40); */
+    background-color: rgb(8, 3, 40);
     display: inline-block;
     width: 80%
 }
