--- a/src/components/Youtube/videoDetail.css
+++ b/src/components/Youtube/videoDetail.css
@@ -13,7 +13,7 @@ iframe {
     padding-bottom: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
     overflow:hidden;
 }
-
+/* absolute position to render the 100% height and width */
 .video iframe {
     position: absolute;
     top: 0; 
