styled quote and positioned quote and button

--- a/src/components/FirstPage/FirstPage.css
+++ b/src/components/FirstPage/FirstPage.css
@@ -1,25 +1,28 @@
- /* #frame { */
+/* #frame { */
    /* top: 60%; */
    /* transform: translate(-60%, -50%); */
    /* position: relative; */
  /* } */
 
- #frame{
-  display: inline-block;
-  /* align-self: center; */
+ /* #frame{ */
+  /* /* display: flex; */
+  /* justify-content: center; 
+  align-self: center; */
   /* transform: scale(0.5) */
- }
+ /* } */
 
- p {
+ #quote {
+  position: absolute;
    color: black;
-   margin-top: -6%;
+   font-size: 20px;
+   top: 30em;
    text-align: center;
-   font-size: 25px;
+   width: 100%;
  }
 
   /* #button {
    position: relative;
-   width: 300px !important;
+   
    left: 135% !important;
    height: 50px;
    margin-top: 600px;
@@ -27,8 +30,32 @@
    align-self: center;
  }  */
 
- #buttonDiv{ 
+ #button{ 
   display: flex;
-  margin-top: 3%;
-  justify-content: center;
- } 
+  align-items: center;
+  position: absolute;
+  margin-top: 30em;
+  margin-left: 45%;
+  justify-content: center; 
+  z-index: 999;
+   /* display: flex;
+    flex-direction: column */
+  
+  } 
+
+  #frame {
+    display: flex;
+    flex-direction: column;
+  }
+  /* react-icons are default inline  */
+ /* #icon {
+  display: block;
+    /* justify-content:left; */
+  /* position: relative;  */
+  /* padding doesn't work! */
+  /* padding-left: 6px;
+  padding-right: 6px; */
+  
+    /* align-items:flex-end;   */
+ /* }  */ 
+
