--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,59 +1,34 @@
+/* footer styling */
+/* styles the text in the footer */
 #title {
-    /* padding-left: 750px; */
     text-align: center;
     font-size: 20px;
     margin-bottom: 0px;
     color: #fff;
 }
 
+/* Footer button styling  */
 #footerButton {
-
-    /* position: absolute; */
-    /* margin-left: 1025px;  */
-    /* width: 200px !important; */
     bottom: 20px !important;
     font-size: 20px;
-    /* text-color: #fff */
     margin-top: 10px;
     background-color: #134252;
     color: #fff;
-    outline:none;
+    outline: none;
     border: none;
-
 }
 
 #footerButton:hover {
     background-color: #265e70;
 }
 
+/* Container styling */
 #footer-container {
     display: flex;
 }
 
 #bottom {
     background-color: #3d95b3;
-    /* margin-top: 200px; */
     text-align: center;
-    /* width: 200%; */
-    /* height: 75px; */
     margin-top: 5%;
 }
-
-/* #footer {
-    background-color: darkgrey;
-
-}
-
-#title {
-    padding-left: 700px;
-}
-
-#idea {
-    
-        position: absolute;
-        margin-left: 75px;
-        left: 50%;
-        width: 100px;
-        bottom: 5px;
-        top: 5px;
-} */
