--- a/src/components/Youtube/videoDetail.css
+++ b/src/components/Youtube/videoDetail.css
@@ -10,13 +10,15 @@ iframe {
 
 .video {
     position: relative;
-    padding-bottom: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
-    overflow:hidden;
+    padding-bottom: 56.25%;
+    /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+    overflow: hidden;
 }
+
 /* absolute position to render the 100% height and width */
 .video iframe {
     position: absolute;
-    top: 0; 
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
