fixed onclick function

--- a/src/components/FirstPage/FirstPage.css
+++ b/src/components/FirstPage/FirstPage.css
@@ -8,6 +8,11 @@
    width: 100%;
  }
 
+ /* styles and positions the 'click here' button */
+ #button {
+   position: relative;
+   z-index: 999;
+ }  
 
  /* positions the frame div which contains logo, quote and button */
  #frame {
