updated screenshots and background colour

--- a/src/components/FirstPage/FirstPage.css
+++ b/src/components/FirstPage/FirstPage.css
@@ -43,7 +43,7 @@ body{
 
 .area{
     background: #3d96b345;
-    background: -webkit-linear-gradient(to left, #73a1b1, #025875);  
+    background: -webkit-linear-gradient(to left, #93bfce, #157696);  
     width: 100%;
     height:100vh;
 }
